<resources>
    <string name="app_name">GeoCollect</string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false"></string>
    <string name="firebase_path" translatable="false"></string>
    <string name="firebase_email" translatable="false"></string>
    <string name="firebase_password" translatable="false"></string>
    <string name="model">Enter MODEL</string>
    <string name="vechNo">Enter Vechical Number</string>
    <string name="emailId">Enter Email ID</string>
    <string name="Username">Enter User name</string>
    <string name="password">Enter Password</string>
    <string name="mfgDt">Enter Manufacturing date</string>
    <string name="password_len">Password should be greater than 6 letters</string>
    <string name="complete_form_warning">Fill All the Fields</string>
    <string name="account_success">Account Creatation Success</string>
    <string name="account_failed">Account Creatation Failed</string>
    <string name="verification_mail">Verification email successfully sent to </string>
    <string name="verification_mail_fail">Failed to send Verification mail </string>
    <string name="signed_out">Signed Out Of Application</string>
    <string name="firebase_parent_node">user</string>
    <string name="firebase_child_node">name</string>


</resources>
